@@ -14,9 +14,7 @@ rofi \- A window switcher, run dialog and dmenu replacement
 [ \-bgalt \fIcolor\fP ]
 [ \-hlfg \fIcolor\fP ]
 [ \-hlbg \fIcolor\fP ]
-[ \-key \fIcombo\fP ]
-[ \-dkey \fIcomdo\fP ]
-[ \-rkey \fIcomdo\fP ]
+[ \-key\-\fBmode\fP \fIcombo\fP ]
 [ \-terminal \fIterminal\fP ]
 [ \-location \fIposition\fP ]
 [ \-fixed\-num\-lines ]
@@ -77,59 +75,17 @@ The default key combinations are:
    Show ssh\-dialog.
 .SH OPTIONS
 .PP
-\fB\fC\-key\fR
+\fB\fC\-key\-**mode**\fR \fBKEY\fP
 .IP
-Change the key combination to display all windows.
+Change the key combination to display a \fBmode\fP 
 .PP
 .RS
 .nf
-  rofi \-key F12
-  rofi \-key control+shift+s
-  rofi \-key mod1+Tab
+  rofi \-key\-run F12
+  rofi \-key\-ssh control+shift+s
+  rofi \-key\-window mod1+Tab
 .fi
 .RE
-.IP
-Default: \fIF12\fP
-.PP
-\fB\fC\-rkey\fR
-.IP
-Change the key combination to display the run dialog.
-.PP
-.RS
-.nf
-  rofi \-rkey F11
-  rofi \-rkey control+shift+d
-  rofi \-rkey mod1+grave (grave=backtick)
-.fi
-.RE
-.IP
-Default: \fIAlt\-F2\fP
-.PP
-\fB\fC\-skey\fR
-.IP
-Change the key combination to display the ssh dialog.
-.PP
-.RS
-.nf
-  rofi \-skey F10
-  rofi \-skey control+shift+s
-  rofi \-skey mod1+grave (grave=backtick)
-.fi
-.RE
-.IP
-Default: \fIAlt\-F3\fP
-.PP
-\fB\fC\-now\fR
-.IP
-Run rofi in all\-windows mode once then exit. Does not bind any keys.
-.PP
-\fB\fC\-rnow\fR
-.IP
-Run rofi in run\-dialog mode once then exit. Does not bind any keys.
-.PP
-\fB\fC\-snow\fR
-.IP
-Run rofi in ssh mode once then exit. Does not bind any keys.
 .PP
 \fB\fC\-dmenu\fR
 .IP
@@ -649,14 +605,18 @@ Check quotes used on the commandline: e.g. used “ instead of ".
 .SH WEBSITE
 .PP
 \fBrofi\fP website can be found at here
-\[la]https://davedavenport.github.io/rofi/\[ra]
+.UR https://davedavenport.github.io/rofi/
+.UE
 .PP
 \fBrofi\fP bugtracker can be found here
-\[la]https://github.com/DaveDavenport/rofi/issues\[ra]
+.UR https://github.com/DaveDavenport/rofi/issues
+.UE
 .SH AUTHOR
 .PP
 Qball Cow 
-\[la]qball@gmpclient.org\[ra]
+.MT qball@gmpclient.org
+.ME
 .PP
 Original code based on work by: Sean Pringle 
-\[la]sean.pringle@gmail.com\[ra]
+.MT sean.pringle@gmail.com
+.ME
