@@ -312,7 +312,7 @@ void textbox_draw ( textbox *tb )
 // cursor handling for edit mode
 void textbox_cursor ( textbox *tb, int pos )
 {
-    int length = (tb->text == NULL)? 0: strlen(tb->text);
+    int length = ( tb->text == NULL ) ? 0 : strlen ( tb->text );
     tb->cursor = MAX ( 0, MIN ( length, pos ) );
 }
 
@@ -333,7 +333,7 @@ void textbox_cursor_dec ( textbox *tb )
 // Move word right
 void textbox_cursor_inc_word ( textbox *tb )
 {
-    if(tb->text == NULL) {
+    if ( tb->text == NULL ) {
         return;
     }
     // Find word boundaries, with pango_Break?
@@ -351,7 +351,7 @@ void textbox_cursor_inc_word ( textbox *tb )
             break;
         }
     }
-    if(c == NULL) {
+    if ( c == NULL ) {
         return;
     }
     while ( ( c = g_utf8_next_char ( c ) ) ) {
@@ -452,7 +452,7 @@ void textbox_delete ( textbox *tb, int pos, int dlen )
 // delete on character
 void textbox_cursor_del ( textbox *tb )
 {
-    if(tb->text == NULL) {
+    if ( tb->text == NULL ) {
         return;
     }
     int index = g_utf8_next_char ( &( tb->text[tb->cursor] ) ) - tb->text;
